have to copy BinData in sm in case BSONObj is temp SERVER-1694